<resources>
    <string name="app_name">NetHunter CN</string>
    <string name="app_nav_home_label">NetHunter CN</string>
    <string name="hometitle">系统信息</string>
    <string name="nethunter_description">您可以添加、删除、移动、搜索、备份、恢复和重置您的自定义命令项. 您也可以长按项标签来编辑项. </string>
    <string name="nethunter_current_interfaces">网络接口</string>
    <string name="nethunter_external_ip">外部IP</string>
    <string name="nethunter_hid_detect">HID接口</string>
    <string name="nethunter_busybox_detect">Busybox版本</string>
    <string name="nethunter_kernelver_detect">内核版本</string>
    <string name="nethunter_terminal_detect">NetHunter终端状态</string>
    <string name="nethunter_howtouse_cmd">在此处输入您自己的命令字符串, 它将在Android环境中运行以获取显示的输出. </string>
    <string name="nethunter_howtouse_delimiter">如果您想将输出拆分为多行, 请输入您想要的分隔符字符串, 默认为"\\n". </string>
    <string name="nethunter_howtouse_runoncreate">若要在片段创建时立即获取输出, 请勾选此选项. 否则您需要手动点击运行按钮来获取输出. </string>
    <string name="hid_powersploit_description">Powersploit有效负载为您提供了反向meterpreter HTTP/S有效负载的选择. "Payload URL"应是受害机器可访问的URL, 用于下载更大的有效负载. </string>
    <string name="hid_windows_cmd_description">此Windows CMD有效负载允许您向Windows命令提示符输入原始命令. 点击列表菜单可选择键盘布局或UAC绕过选项. </string>
    <string name="kali_services_description">可以通过开关切换按钮启动和停止Kali Chroot服务, 您也可以添加、删除、移动、搜索、备份、恢复和重置您自己的服务项, 并且也可以通过长按项标签来编辑项. </string>
    <string name="kaliservices_howto_startservice">要在Kali中启动服务, 将在KaliChroot内部运行一个如下所示的命令: \n\nbusybox chroot &lt;chroot_folder> /usr/bin/sudo &lt;command_to_start_service>\n\n如果返回值为0, 则认为服务已启动, 反之亦然. </string>
    <string name="kaliservices_howto_stopservice">要在Kali中停止服务, 将在KaliChroot内部运行一个如下所示的命令: \n\nbusybox chroot &lt;chroot_folder> /usr/bin/sudo &lt;command_to_stop_service>\n\n如果返回值为0, 则认为服务已停止, 反之亦然. </string>
    <string name="kaliservices_howto_checkservice">要检查Kali中的服务是否正在运行, 将在KaliChroot外部运行一个如下所示的命令: \n\nbusybox ps -o pid,comm | grep -w \'&lt;service_name>\'\n\n如果返回值为0, 则认为服务正在运行, 反之亦然. </string>
    <string name="kaliservices_howto_runServiceOnBoot">要在Kali Chroot启动后自动启动服务, 请勾选此选项. </string>
    <string name="modules_description">管理内核模块（如果您的内核支持）. 大多数设备将所有驱动程序内置. 要获取信息（modinfo）, 请点击并按住所选模块以显示菜单. </string>
    <string name="custom_commands_description">您可以添加、删除、移动、搜索、备份、恢复和重置您的自定义命令项. 您也可以长按项标签来编辑项. </string>
    <string-array name="custom_commands_sendto_array">
        <item>android</item>
        <item>kali</item>
    </string-array>
    <string-array name="custom_commands_execmode_array">
        <item>interactive</item>
        <item>background</item>
    </string-array>
    <string name="drawertitleusbarsenal">USB Arsenal</string>
    <string name="usbarsenal_hint1_imagemounter">*请将所有.img或.iso文件放置在"/sdcard/nh_files/diskimage/"</string>
    <string name="usbarsenal_current_usb_state">当前USB状态: </string>
    <string name="usbarsenal_description">USB Arsenal非常强大</string>
    <string name="usbarsenal_header">USB功能选择器</string>
    <string name="usbarsenal_enabledfunctions">当前启用的USB功能:</string>
    <string name="usbarsenal_nofunctionsenabled">当前未启用任何USB功能</string>
    <string name="usbarsenal_imagemounter_header">镜像挂载器</string>
    <string name="usbarsenal_imagemounter_description">仅当USB功能\"mass_storage\"已启用时, 才能使用镜像挂载器</string>
    <string name="usbarsenal_networktethering_header">USB网络共享</string>
    <string name="usbarsenal_networktethering_description">仅当USB功能\"rndis\"或\"acmecm\"已启用时, 才能使用USB网络共享</string>
    <string-array name="usbarsenal_target_platform">
        <item>Windows</item>
        <item>Linux</item>
        <item>Mac OS</item>
    </string-array>
    <string-array name="usbarsenal_usb_states_win_lin">
        <item>reset</item>
        <item>hid</item>
        <item>mass_storage</item>
        <item>rndis</item>
        <item>hid,mass_storage</item>
        <item>rndis,hid</item>
        <item>rndis,mass_storage</item>
        <item>rndis,hid,mass_storage</item>
    </string-array>
    <string-array name="usbarsenal_usb_states_mac">
        <item>reset</item>
        <item>hid</item>
        <item>mass_storage</item>
        <item>acm,ecm</item>
        <item>hid,mass_storage</item>
        <item>acm,ecm,hid</item>
        <item>acm,ecm,mass_storage</item>
        <item>acm,ecm,hid,mass_storage</item>
    </string-array>
    <string-array name="usbarsenal_usb_adb">
        <item>启用</item>
        <item>禁用</item>
    </string-array>
    <string-array name="usbarsenal_usb_network_attack_mode">
        <item>仅网络共享</item>
    </string-array>
    <string name="badusb_label">BadUSB中间人攻击</string>
    <string name="badusb_description">这是我们在Black Hat USA 2014上演示的BadUSB攻击的实现. 启用此USB小工具模式后, 您的设备在插入目标计算机时将充当USB网络接口. 将USB电缆连接到PC将强制该PC（Windows或Linux）的所有流量通过NetHunter设备, 从而可以对流量进行中间人攻击. </string>
    <string name="wifipumpkin_description">启动一个邪恶双子接入点并拦截HTTP流量. 自定义 captive portals, 支持移动网络上游（rmnet_data2）、内部wlan0上游、内部wlan0/wlan1 AP模式以及外部适配器. 也支持自定义门户网站. 测试版本. 预览即将添加. </string>
    <string name="mana_hostapd_wpe">用于802.1x/EAP认证攻击的hostapd配置文件（hostapd-wpe）. 这不与MANA一起使用. </string>
    <string name="mana_hostapd_wpe_certs">生成证书（仅首次）</string>
    <string name="mana_dhcpd">Mana使用的dhcpd配置文件. </string>
    <string name="mana_dnsspoof">Mana使用的dnsspoof配置文件. </string>
    <string name="mana_nat_full">执行完整NAT和SSL拦截的Mana脚本. </string>
    <string name="mana_nat_simple">仅执行完整NAT的Mana脚本. </string>
    <string name="mana_nat_simple_bdf">执行完整NAT并将BDFProxy HTTP路由到端口8080的Mana脚本. </string>
    <string name="bdfproxy_cfg">BDFProxy的配置文件. </string>
    <string name="mana_bettercap_description">使用Mana-toolkit将流量路由到bettercap代理</string>
    <string name="hostapd_private_key">私钥密码</string>
    <string name="select_language">语言</string>
    <string name="duckConvertAttack">攻击</string>
    <string name="duck_hunter_headline">DuckHunter脚本可以轻松将“USB Rubber Ducky”脚本转换为NetHunter HID格式. 您可以在极其有用的<a href="http://www.ducktoolkit.com/Home.jsp">Ducky Toolkit</a>站点生成预配置脚本, 或查看官方<a href="https://github.com/hak5darren/USB-Rubber-Ducky/wiki/Duckyscript">README</a>中的Rubber Ducky脚本语法. </string>
    <string-array name="duckhunter_preset_array">
        <item>选择预设</item>
        <item>Hello World</item>
        <item>OSX Perl反向Shell</item>
        <item>OSX Ruby反向Shell</item>
        <item>启用Windows RDP</item>
        <item>伪造Windows 10更新</item>
    </string-array>
    <string name="payload_select">请选择</string>
    <string-array name="payloads">
        <item>windows/meterpreter/reverse_http</item>
        <item>windows/meterpreter/reverse_https</item>
    </string-array>
    <string name="source">编辑源</string>
    <string name="start_badusb">启动BadUSB攻击</string>
    <string name="stop_badusb">停止BadUSB攻击</string>
    <string name="launch_kali_menu">在终端中启动Kali菜单</string>
    <string name="launch_kali_shell">在终端中启动Kali Shell</string>
    <string name="launch_wifite">启动Wifite</string>
    <string name="update_kali_chroot">更新Kali chroot</string>
    <string name="turn_off_external_wifi">关闭外部WiFi</string>
    <string name="update">更新</string>
    <string name="load">从SDCARD加载</string>
    <string name="save">保存到SDCARD</string>
    <string name="execute_attack">执行攻击</string>
    <string name="stop_mana">停止mana</string>
    <string name="start_mana">启动mana</string>
    <string name="bssid">BSSID</string>
    <string name="ssid">SSID</string>
    <string name="chanel">信道</string>
    <string name="enable_karma">启用karma</string>
    <string name="admin">UAC绕过</string>
    <string name="choose_language">键盘布局</string>
    <string name="reset_usb">重置USB</string>
    <string name="iface">接口</string>
    <string name="payload">有效负载</string>
    <string name="loading_service">正在加载服务状态</string>
    <string name="get_external_ip">获取外部IP</string>
    <string name="karma_loud">karma loud</string>
    <string name="ps_ip_address">IP地址 (LHOST)</string>
    <string name="ps_port">端口 (LPORT)</string>
    <string name="ps_payload_url">Payload URL</string>
    <string name="toast_error_permissions">NetHunter应用没有权限发送到NetHunter终端！</string>
    <string name="toast_install_terminal">启动意图错误. 请安装Android终端！</string>
    <string name="descriptiontext" />
    <string name="macchanger_description">**重要: Android 10已提供MAC随机化功能, 但如果您仍想自行设置自定义mac地址, 需满足以下条件: \n1. 在您连接的每个SSID上启用“使用随机MAC”. \n2. 您要连接的AP必须事先使用正确的密码连接过. \n因为手动连接到AP会丢失更改的mac. </string>
    <string name="interface_select">选择一个接口: </string>
    <string name="macchanger_select">选择macchanger模式: </string>
    <string name="reset_mac">重置wlan0 MAC地址</string>
    <string name="currentmac">当前MAC: </string>
    <string name="TwoMACDigits">XX</string>
    <string name="macSeparator">:</string>
    <string name="changeMAC">更改MAC</string>
    <string name="resetMAC">重置MAC</string>
    <string name="reloadMAC">重新加载MAC</string>
    <string name="randomMAC">随机MAC</string>
    <string name="customMAC">自定义MAC</string>
    <string name="autorunningscripts">NetHunter: 正在自动运行启动脚本</string>
    <string name="toastForNoBusybox">糟糕！NetHunter找不到busybox！</string>
    <string name="readonly">只读</string>
    <string-array name="macchanger_opts">
        <item>随机MAC</item>
        <item>自定义MAC</item>
    </string-array>
    <string-array name="interface_opts">
        <item>wlan0 (内部无线网卡)</item>
        <item>wlan1 (外部无线网卡)</item>
        <item>eth0 (以太网)</item>
        <item>rndis0 (USB > 以太网)</item>
        <item>usb0 (USB > 以太网 Nexus7 2013 共享时 | badusb)</item>
    </string-array>
    <string-array name="usb_states">
        <item>重置</item>
        <item>mtp,hid</item>
        <item>hid</item>
        <item>mass_storage</item>
        <item>rndis</item>
        <item>hid,mass_storage</item>
        <item>rndis,hid</item>
        <item>rndis,mass_storage</item>
        <item>rndis,hid,mass_storage</item>
    </string-array>
    <string-array name="usb_targets">
        <item>Windows</item>
        <item>Mac OS</item>
    </string-array>
    <string-array name="usb_adb">
        <item>无adb</item>
        <item>adb</item>
    </string-array>
    <string name="kex_description">欢迎使用Kali NetHunter桌面体验. \n直接从您的口袋中享受Kali Linux的全部潜力, 甚至支持HDMI输出. 支持音频, 使用音频管理器通过KeX流式传输声音. 已添加延迟以避免在某些设备上软重启. </string>
    <string name="bt_description">欢迎使用蓝牙Arsenal！现在, 内核中启用了RFCOMM、UART H4、VHCI和BINDER_IPC的设备, 或具有bt_smd驱动程序的设备, 可以使用内部蓝牙支持. </string>
    <string name="bt_carwhisperer">来自过去的Carwhisperer脚本. 收听或向各种设备（如扬声器、耳机、手表甚至汽车）注入音频. 内部蓝牙（VHCI或bt_smd）尚不支持Carwhisperer. </string>
    <string name="bt_spoof">欺骗您的BT适配器地址、类别和名称. </string>
    <string name="bt_tools">暴力破解BT设备地址、ping并发现其服务. </string>
    <string name="bt_badbt">受Mr.Robot警车场景和Flipper XFW团队的启发, 您现在可以创建蓝牙键盘服务器并从NetHunter直接发送击键. 您可能需要从右上角菜单再次运行设置来安装BadBT. 在智能手表上针对配对手机运行此功能可能会使您的手表与phone/wearos应用断开连接. 前缀是实验性的. </string>
    <string name="set_description">由yesimxev开发的社会工程学工具包电子邮件模板构建器. 请注意, 您需要为SET配置有效的Gmail或电子邮件中继配置才能使用这些模板. 建议在使用Gmail时不要设置帐户图片. </string>
    <string name="wps_description">OneShot执行WPS PIN和Pixie Dust攻击, 无需切换到监控模式. 注意, 如果扫描为空, 您可能需要重置接口. </string>
    <string name="settings_description">在此处选择您想要的启动动画. 请注意, 一些较旧的手机偏好原始屏幕分辨率的90%大小, 以便流畅运行. 在这种情况下, 请勾选转换, 然后同时设置图像分辨率和最终分辨率. </string>
    <string name="kernel_description">直接从Android刷入您的自定义内核. 仍处于实验状态. 某些系统不支持运行时刷机. 在这种情况下, 建议通过恢复模式刷入内核. 您设备的实际代号可能不在内核仓库中, 在这种情况下, 请使用下面的列表查找可用的设备名称. </string>
    <string name="thechroottitle">Kali chroot</string>
    <string name="installkalichrootbutton">安装Kali Chroot</string>
    <string name="removekalichrootbutton">移除Chroot</string>
    <string name="MaintainChrootInTerminal">添加元包</string>
    <string name="existingchrootfound">发现现有的Kali chroot目录！</string>
    <string name="nokalichrootfound">未找到Kali chroot目录. </string>
    <string name="switch_gps_provider">Android GPS提供程序</string>
    <string name="switch_gpsd">chroot中的gpsd</string>
    <string name="gps_button_launch_app">在NH终端中启动%s</string>
    <string name="gps_description">将您的GPS转换为NMEA, 然后提供给Kali chroot. 非常适合使用Kismet进行wardriving, 或仅为Kali提供通用GPS服务器. 选择您想要的数据源. 在启动Kismet之前, 请确保您的无线接口处于监控模式. 由于QCACLD-3.0驱动程序的监控模式, 内部无线接口也可以使用. </string>
    <string name="gps_help">您可能需要授予Nethunter GPS权限. 转到设置 > 应用 > Nethunter > 权限. </string>
</resources>