<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:gravity="right"
    android:orientation="vertical">

    <!-- 说明文字 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/gps_description" />

    <!-- GPS 提供者开关 -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_gps_provider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="10dp"
        android:text="@string/switch_gps_provider"
        android:textOff="关闭"
        android:textOn="开启" />

    <!-- gpsd 开关 -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_gpsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/switch_gpsd" />

    <!-- 无线网卡接口 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="无线网卡接口"
            android:padding="10dp" />

        <EditText
            android:id="@+id/wlan_interface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="wlan0" />
    </LinearLayout>

    <!-- 蓝牙接口 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="蓝牙接口"
            android:padding="10dp" />

        <EditText
            android:id="@+id/bt_interface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="hci0" />
    </LinearLayout>

    <!-- RTL-SDR 功能 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/rtlsdr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="RTL-SDR" />

        <CheckBox
            android:id="@+id/rtlamr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="RTL AMR" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/rtladsb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="RTL ADS-B" />

        <CheckBox
            android:id="@+id/mousejack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="Mousejack" />
    </LinearLayout>

    <!-- 分隔 -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="15sp" />

    <!-- 操作按钮 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gps_button_launch_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps_button_launch_app" />

        <ImageButton
            android:id="@+id/gps_button_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_action_settings_applications" />
    </LinearLayout>

    <!-- 帮助文字 -->
    <TextView
        android:id="@+id/gps_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/gps_help"
        tools:visibility="visible" />

    <!-- 日志输出 -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TextView
            android:id="@+id/gps_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:fontFamily="monospace"
            android:padding="16sp"
            android:textColor="@android:color/holo_green_light" />
    </ScrollView>
</LinearLayout>